expected/main/gens/primIxMaxBound-neg.err
ERROR: "actual/main/gens/primIxMaxBound-neg.lc", line 3
external max0  {primIxMaxBound 0}  :: Ix 0
         ^
No generated implementation: 0 is not a valid index limit; should be between 1 and 2147483647

ERROR: "actual/main/gens/primIxMaxBound-neg.lc", line 4
external max2G {primIxMaxBound 2G} :: Ix 2G
         ^
No generated implementation: 2147483648 is not a valid index limit; should be between 1 and 2147483647

ERROR: Aborting after 2 previously reported errors

